--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "start-new-project",
   "version": "1.0.0",
-  "main": "index.mjs",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
