--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "tsc -w",
     "dev": "nodemon --inspect dist/index.js",
     "build": "tsc",
-    "start": "node --loader ts-node/esm src/index.ts"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "express": "^4.18.2"
